# assumption-testing

./: .gitignore  CMakeLists.txt  LICENSE  README.md
lib/assumption_testing/test/: CMakeLists.txt
lib/assumption_testing/test/client/: CMakeLists.txt
lib/assumption_testing/test/client/test/: collaboration_tests.cpp  contract_tests.cpp  google_test_main.cpp
lib/assumption_testing/test/dependency/: CMakeLists.txt
lib/assumption_testing/test/dependency/include/: class.h  export_declaration.h
lib/assumption_testing/test/dependency/src/: class.cpp
